# boilerworks

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  CNAME  Makefile  README.md  boilerworks.yaml.example  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
boilerworks/: __init__.py  bootstrap.py  cli.py  console.py  generator.py  manifest.py  mcp_server.py  registry.py  renderer.py  wizard.py
boilerworks/data/: templates.yaml
cli/bootstrap/: index.html
cli/init/: index.html
cli/list/: index.html
cli/setup/: index.html
contributing/: index.html
data/: templates.yaml
docs/: contributing.md  index.md
docs/cli/: bootstrap.md  init.md  list.md  setup.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: choosing.md  templates.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/choosing/: index.html
guide/templates/: index.html
search/: search_index.json
skill/: package.json  skill.md
tests/: conftest.py  test_cli.py  test_console.py  test_generator.py  test_manifest.py  test_registry.py  test_renderer.py  test_wizard.py
